@@ -1,6 +1,10 @@
 # ChangeLog for games-fps/hexen2-demodata
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  31 Jan 2010; Markos Chandras <hwoarang@gentoo.org>
+  hexen2-demodata-1.4.3.ebuild:
+  Drop depcreated built_with_use call
 
   26 Mar 2009; Tiago Cunha <tcunha@gentoo.org> metadata.xml:
   Fix metadata.xml.
